--- a/answer.toml
+++ b/answer.toml
@@ -4,12 +4,11 @@ country = "us"
 fqdn = "pveauto.testinstall"
 mailto = "mail@no.invalid"
 timezone = "America/Chicago"
-root_password = "1234"
-root_ssh_keys = []
+root-password = "12345678"
 
 [network]
 source = "from-dhcp"
 
 [disk-setup]
 filesystem = "ext4"
-disk-list = "/dev/sda"
+disk-list = ["/dev/sda"]
